[gd_scene load_steps=4 format=2]

[ext_resource path="res://TransitionManager/script/transition_manager.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/UP:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 272, -499 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/UP:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/DOWN:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -353, 87 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/DOWN:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 30.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "in"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/UP:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 0.108819, 1, 4.59479, 1 ),
"update": 0,
"values": [ Vector2( 212, -500 ), Vector2( 61, -355 ), Vector2( 61, -355 ), Vector2( 255, -552 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/UP:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 0.108819, 1, 4.59479, 1 ),
"update": 0,
"values": [ 30.0, 30.0, 30.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/UP:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.108819, 1 ),
"update": 0,
"values": [ Vector2( 720, 350 ), Vector2( 720, 350 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/DOWN:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 0.108819, 1, 4.59479, 1 ),
"update": 0,
"values": [ Vector2( -369, 39 ), Vector2( -185, -129 ), Vector2( -185, -129 ), Vector2( -369, 39 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/DOWN:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 0.108819, 1, 4.59479, 1 ),
"update": 0,
"values": [ 30.0, 30.0, 30.0, 30.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/DOWN:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.108819, 1 ),
"update": 0,
"values": [ Vector2( 819, 382 ), Vector2( 819, 382 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.445337 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_start_transition"
} ]
}

[node name="TransitionManager" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="UP" type="ColorRect" parent="CanvasLayer"]
margin_left = 272.0
margin_top = -499.0
margin_right = 992.0
margin_bottom = -149.0
rect_rotation = 30.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DOWN" type="ColorRect" parent="CanvasLayer"]
margin_left = -353.0
margin_top = 87.0
margin_right = 466.0
margin_bottom = 469.0
rect_rotation = 30.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/in = SubResource( 1 )

[connection signal="remove_object" from="." to="." method="_on_TransitionManager_remove_object"]
[connection signal="start" from="." to="." method="_on_TransitionManager_start"]
